# smaf

./: Cargo.toml
.github/workflows/: coverage.yml  rust.yml
smaf/: Cargo.toml
smaf/src/: chunks.rs  constants.rs  lib.rs  smaf.rs
smaf/src/chunks/: content_info.rs  optional_data.rs  pcm_audio_track.rs  score_track.rs
smaf/tests/: test.rs
smaf_cli/: Cargo.toml
smaf_cli/src/: main.rs
smaf_player/: Cargo.toml
smaf_player/src/: adpcm.rs  lib.rs
src/: chunks.rs  lib.rs  smaf.rs
src/chunks/: content_info.rs  optional_data.rs  score_track.rs
test_data/: bell.mmf  midi.mmf  wave.mmf
tests/: test.rs
